--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -27,3 +27,10 @@ jobs:
         uses: helaili/jekyll-action@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Generate the set of tag pages.
+      - uses: actions/checkout@v2
+      - uses: hendrixjoseph/jekyll-tag-page-generator-action@master
+        with:
+          source: "/tags.json"
+          destination: "./tags/"
