--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -32,5 +32,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: hendrixjoseph/jekyll-tag-page-generator-action@master
         with:
-          source: "/tags.json"
+          source: "https://johndeo-ai.github.io/type/tags.json"
           destination: "./tags/"
