--- a/_config.yml
+++ b/_config.yml
@@ -36,8 +36,8 @@ exclude:
   - Gemfile.lock
 
 # Tags
-tag_page_dir:         tag
-tag_page_layout:      tag_page
+tag_page_dir:         tags
+tag_page_layout:      tag_posts
 tag_permalink_style:  pretty
 
 # Pages path
