--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ exclude:
 
 # Tags
 tag_page_dir:         tag
-tag_page_layout:      tag_page
+tag_page_layout:      tag_posts
 tag_permalink_style:  pretty
 
 # Pages path
